--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -15,8 +15,9 @@ type Props = CollectionEntry<'docs'>['data'] & {
 
 const { headings, ...data } = Astro.props;
 // const canonicalURL = new URL(Astro.url.pathname, Astro.site);
-const canonicalURL = "https://ahmetahaydemir.dev/";
 const currentPage = Astro.url.pathname;
+const baseDomain = "https://ahmetahaydemir.dev";
+const canonicalURL = baseDomain + currentPage;
 const currentFile = `src/content/docs${currentPage.replace(/\/$/, '')}.md`;
 const githubEditUrl = `${GITHUB_EDIT_URL}/${currentFile}`;
 ---
