--- a/src/components/LeftSidebar/LeftSidebar.astro
+++ b/src/components/LeftSidebar/LeftSidebar.astro
@@ -12,7 +12,7 @@ const langCode = getLanguageFromURL(currentPage);
 const sidebar = SIDEBAR[langCode];
 ---
 
-<nav aria-labelledby="grid-left">
+<nav aria-label="Primary">
   <div class="TabGroup"><button class="active">Documentation</button></div>
   <ul class="nav-groups">
     {
@@ -84,14 +84,19 @@ const sidebar = SIDEBAR[langCode];
   nav {
     width: 100%;
     margin-right: 1rem;
+    font-size: var(--theme-text-sm);
   }
-
+  .nav-group {
+    margin-bottom: 1rem;
+  }
   .nav-groups {
-    height: 100%;
-    padding: 2rem 0;
+    padding-top: 1rem;
+    max-height: 100%;
     overflow-x: visible;
     overflow-y: auto;
-    max-height: 100vh;
+  }
+  .nav-group.active {
+    display: block;
   }
 
   .nav-groups > li + li {
@@ -116,7 +121,7 @@ const sidebar = SIDEBAR[langCode];
     color: var(--theme-text);
     border-bottom-color: var(--theme-accent);
     font-weight: bold;
-    font-size: 24px;
+    font-size: 20px;
   }
   .TabGroup button,
   .TabGroup a {
@@ -146,21 +151,28 @@ const sidebar = SIDEBAR[langCode];
     transition: 0.2s transform ease;
     vertical-align: middle;
   }
-
-  .nav-group-title {
-    font-size: 1rem;
-    font-weight: 600;
-    /* padding: 0.1rem 1rem; */
-    /* text-transform: uppercase; */
-    /* margin-bottom: 0.5rem; */
+  svg path {
+    fill: currentColor;
   }
-
+  .nav-group-title {
+    font-size: 1em;
+    font-weight: bolder;
+    padding: 0.3rem 2rem;
+  }
+  summary {
+    cursor: pointer;
+  }
+  summary h2 {
+    all: inherit;
+    margin: 0;
+    padding: 0;
+  }
   .nav-link a {
     font-size: 1rem;
     margin: 1px;
     padding: 0.3rem 1rem;
     font: inherit;
-    color: inherit;
+    color: var(--theme-accent);
     text-decoration: none;
     display: block;
   }
@@ -178,7 +190,22 @@ const sidebar = SIDEBAR[langCode];
 
   @media (min-width: 50em) {
     .nav-groups {
-      padding: 0;
+      position: fixed;
+      top: calc(var(--theme-navbar-height) + 3rem);
+      bottom: 0;
+      width: calc(
+        var(--theme-left-sidebar-width) - var(--min-spacing-inline) * 1.6
+      );
+    }
+    .nav-group-title {
+      padding: 0.2rem 1rem;
+    }
+    .nav-link a {
+      padding: 0.25rem 1.25rem;
+    }
+    .nav-group {
+      display: none;
+      margin-bottom: 1.75rem;
     }
   }
 </style>
