--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -10,74 +10,6 @@ body {
     overflow: hidden;
 }
 
-.battleEntityCellContainer {
-    margin: auto;
-    width: 90vw;
-    height: max-content;
-    display: grid;
-    gap: 50px;
-    grid-template-columns: repeat(auto-fit, minmax(150px, 25fr));
-    /* grid-template-columns: repeat(auto-fit, 225px); */
-    grid-column-gap: 0;
-    place-items: center;
-    place-content: center;
-}
-
-.battleEntityCell {
-    width: 150px;
-    height: 200px;
-    display: flex;
-    align-items: center;
-    align-content: stretch;
-    flex-direction: column;
-    justify-content: space-between;
-    background-color: bisque;
-    border-radius: 25%;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
-}
-.battleEntityBar {
-    width: 150px;
-    height: 100px;
-    position: relative;
-    display: grid;
-    grid-template-columns: auto auto;
-    bottom: 0;
-    background-color: rgb(54, 54, 54);
-    border-radius: 10%;
-    box-shadow: rgba(9, 30, 66, 0.4) 0px 4px 8px -2px, rgba(9, 30, 66, 0.1) 0px 0px 0px 1px;
-    text-align: center;
-    z-index: 2;
-}
-.battleEntityTitle{
-    grid-column-start: 1;
-    grid-column-end: 3;
-    align-self: center;
-    text-align: center;
-    color: white;
-    font-weight: bolder;
-    font-size: large;
-    font-family: "Georgia";
-    text-decoration: none;
-}
-.battleEntityClassBar{
-    grid-row: 2;
-    align-self: center;
-    text-align: center;
-    color: white;
-    background-color:darkslateblue;
-    border-radius: 10%;
-    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-}
-.battleEntityOriginBar{
-    grid-row: 2;
-    align-self: center;
-    text-align: center;
-    color: white;
-    background-color:darkcyan;
-    border-radius: 10%;
-    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-}
-
 .cover_bg_1 {
     background: url("../SeamlessPurple.jpg");
     background-repeat: repeat;
@@ -176,76 +108,34 @@ body {
     }
 }
 
-.container {
+.home-page-container {
     position: absolute;
+    bottom: 0;
     width: 100vw;
-    justify-content: center;
-    align-self: self-end;
-    translate: 0 175px;
+}
+
+.home-page-grid {
     display: flex;
-    gap: 10px;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    padding: 1rem;
+    gap: 1rem;
+    list-style: none;
 }
 
-.card {
-    display: flex;
-    height: 280px;
-    width: 200px;
-    background-color: #17141d;
-    border-radius: 10px;
-    box-shadow: -1rem 0 3rem #000;
-    transition: 0.4s ease-out;
-    position: relative;
-    left: 0px;
+* {
+    box-sizing: border-box;
+    margin: 0;
 }
 
-.card:hover {
-    transform: translateY(-50px);
-    transition: 0.4s ease-out;
-}
+@media (max-width: 1000px) {
+    .profile_banner {
+        scale: 1.5;
+        overflow: hidden;
+    }
 
-.card:hover~.card {
-    position: relative;
-    left: 50px;
-    transition: 0.4s ease-out;
-}
-
-.title {
-    color: white;
-    font-weight: bolder;
-    font-size: large;
-    font-family: "Georgia";
-    position: absolute;
-    text-decoration: none;
-    left: 25px;
-    top: 15px;
-}
-
-.bar {
-    position: absolute;
-    top: 50px;
-    left: 20px;
-    height: 5px;
-    width: 150px;
-}
-
-.emptybar {
-    background-color: #2e3033;
-    width: 100%;
-    height: 100%;
-}
-
-.filledbar {
-    position: absolute;
-    top: 0px;
-    z-index: 3;
-    width: 0px;
-    height: 100%;
-    background: rgb(0, 154, 217);
-    background: linear-gradient(90deg, rgba(0, 154, 217, 1) 0%, rgba(217, 147, 0, 1) 65%, rgba(255, 186, 0, 1) 100%);
-    transition: 0.6s ease-out;
-}
-
-.card:hover .filledbar {
-    width: 120px;
-    transition: 0.4s ease-out;
+    .profile_banner_background {
+        scale: 1.5;
+        overflow: hidden;
+    }
 }
