Battle Entity Grid And Page Genreation

--- a/src/components/LeftSidebar/LeftSidebar.astro
+++ b/src/components/LeftSidebar/LeftSidebar.astro
@@ -175,6 +175,7 @@ const sidebar = SIDEBAR[langCode];
     color: var(--theme-accent);
     text-decoration: none;
     display: block;
+    /* font-weight: 500; */
   }
 
   .nav-link a:hover,
