Class Origin Document

--- a/src/pages/wild-chess-simulator/[...battleEntityName].astro
+++ b/src/pages/wild-chess-simulator/[...battleEntityName].astro
@@ -29,7 +29,7 @@ entryMarkFirst.data.title = battleEntity.Name;
 <MainLayout headings={headings} {...entryMarkFirst.data}>
 	<Content />
 	<a>
-		{battleEntityName}
+		{battleEntity.Name}
 	</a>
 	<a>
 		{battleEntity.Class}
