Trailing Slashes For Firebase Deploy Hosting Fİx

--- a/src/components/PageContent/PageEntityItem.astro
+++ b/src/components/PageContent/PageEntityItem.astro
@@ -76,7 +76,7 @@ const { cardTitle, cardDesc, cardLink, cardLogo } = Astro.props;
 	}
 	.card:hover {
 		background-color: rgba(0, 0, 0, 0.25);
-		transition: ease-in-out 0.2s;
+		transition: none;
 		cursor: pointer;
 	}
 	.logo img {
